<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_first_fragment"
            android:icon="@drawable/ic_one"
            android:title="@string/drawer1"
            android:checked="true"/>

        <item
            android:id="@+id/nav_second_fragment"
            android:icon="@drawable/ic_two"
            android:title="@string/drawer2" />

        <item
            android:id="@+id/nav_third_fragment"
            android:icon="@drawable/ic_three"
            android:title="@string/drawer3"/>

        <item
            android:id="@+id/nav_fourth_fragment"
            android:icon="@drawable/ic_accept"
            android:title="@string/drawer4"/>

    </group>
</menu>