<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.foi.air.potrosko.transactions.TransactionActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/linearLayout2"
            android:layout_gravity="center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newtr_trosak"
                android:id="@+id/btnExpense"
                android:textColor="@color/red"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newtr_prihod"
                android:id="@+id/btnIncome"
                android:textColor="@color/green"
                />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingRight="20dp"
            android:paddingTop="50dp">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberSigned|numberDecimal"
                android:ems="10"
                android:id="@+id/price"
                android:layout_below="@+id/linearLayout2"
                android:layout_centerHorizontal="true"

               >
                <requestFocus/>
                </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/currency"
                android:id="@+id/valute"
                android:layout_alignBottom="@+id/valute"
                android:layout_toRightOf="@+id/valute"
                android:layout_toEndOf="@+id/valute"
                android:textSize="30dp"
                android:textIsSelectable="true" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>

